--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "robloach/component-installer": "^0.2.3",
         "components/bootstrap-default": "^3.3",
         "components/jquery": "^3.1",
-        "components/jqueryui": "^1.12"
+      "components/jqueryui": "^1.12",
+      "laravelcollective/html": "5.3.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
