--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,14 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.3.*",
+        "laravel/framework": "5.4.*",
         "webpatser/laravel-uuid": "^2.0",
         "robloach/component-installer": "^0.2.3",
         "components/bootstrap-default": "^3.3",
         "components/jquery": "^3.1",
       "components/jqueryui": "^1.12",
-      "laravelcollective/html": "5.3.*"
+      "laravelcollective/html": "5.4.*",
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
