--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "components/jquery": "^3.1",
       "components/jqueryui": "^1.12",
       "laravelcollective/html": "5.4.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "intervention/image": "^2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
