--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
       "components/jqueryui": "^1.12",
       "laravelcollective/html": "5.4.*",
         "laravel/tinker": "^1.0",
-        "intervention/image": "^2.3"
+        "intervention/image": "^2.3",
+        "iatstuti/laravel-cascade-soft-deletes": "1.2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
