--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "bootstrap-sass": "^3.3.7",
     "components-jqueryui": "^1.12",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.1"
+    "jquery": "^3.1",
+    "jquery-ui": "^1.12.1"
   },
   "devDependencies": {
     "laravel-elixir": "^6.0.0-14",
