--- a/composer.json
+++ b/composer.json
@@ -5,25 +5,26 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.6.4",
+        "php": ">=7.1.0",
         "ext-imagick": "*",
         "ext-zip": "*",
         "ext-mysqli": "*",
 
-        "laravel/framework": "5.4.*",
+        "laravel/framework": "5.5.*",
         "laravel/tinker": "^1.0",
-        "webpatser/laravel-uuid": "^2.0",
-        "laravelcollective/html": "5.4.*",
+        "webpatser/laravel-uuid": "^3.0",
+        "laravelcollective/html": "5.5.*",
         "intervention/image": "^2.3",
-        "iatstuti/laravel-cascade-soft-deletes": "1.2.*",
+        "iatstuti/laravel-cascade-soft-deletes": "1.3.*",
         "chumper/zipper": "1.0.x"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.0",
+        "phpunit/phpunit": "~6.0",
         "symfony/css-selector": "3.1.*",
-        "symfony/dom-crawler": "3.1.*"
+        "symfony/dom-crawler": "3.1.*",
+        "filp/whoops":  "~2.0"
     },
     "autoload": {
         "classmap": [
@@ -48,15 +49,17 @@
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
             "php artisan folders:generate",
-            "php artisan optimize",
             "php artisan key:generate",
             "php artisan migrate --seed",
             "php artisan storage:link"
         ],
         "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan optimize"
-        ]
+            "Illuminate\\Foundation\\ComposerScripts::postUpdate"
+        ], 
+        "post-autoload-dump": [
+          "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+          "@php artisan package:discover"
+    ]
     },
     "config": {
         "preferred-install": "dist"
