--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravelcollective/html": "5.5.*",
         "intervention/image": "^2.3",
         "iatstuti/laravel-cascade-soft-deletes": "1.3.*",
-        "chumper/zipper": "1.0.x"
+        "chumper/zipper": "1.0.x",
+        "spatie/laravel-permission": "^2.7"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
