--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "intervention/image": "^2.3",
         "iatstuti/laravel-cascade-soft-deletes": "1.3.*",
         "chumper/zipper": "1.0.x",
-        "spatie/laravel-permission": "^2.7"
+        "spatie/laravel-permission": "^2.7",
+        "moontoast/math": "^1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
